@@ -20,10 +20,9 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
-import java.sql.Timestamp;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Random;
 
 @RequiredArgsConstructor
 @Service
@@ -35,6 +34,7 @@ public class FeedService {
     private final PostMapper postMapper;
     private final FetchPostsMapper fetchPostsMapper;
     private final UserRepository userRepository;
+    private final Random random = new Random();
 
     public PostDto createPost(PostDto createdPost) {
         UserEntity user = userRepository.findById(createdPost.getUserId())
@@ -55,13 +55,13 @@ public class FeedService {
         List<PostEntity> posts = postRepository.findAll();
         return posts.stream()
                 .map(fetchPostsMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public PageResponse<FetchPostsDto> findPosts(FeedSearchCriteria criteria) {
         Specification<PostEntity> spec = Specification.where(null);
 
-        logger.info("Search Criteria: " + criteria);
+        logger.info("Search Criteria: {}", criteria);
 
         if (criteria.createdDateFrom() != null || criteria.createdDateTo() != null) {
             spec = spec.and(PostSpecifications.postedBetween(criteria.createdDateFrom(), criteria.createdDateTo()));
@@ -88,7 +88,7 @@ public class FeedService {
         Pageable pageable = PageRequest.of(pageNumber, pageSize, sort);
 
         Page<PostEntity> postPage = postRepository.findAll(spec, pageable);
-        logger.info("Post Page:" + postPage.getContent());
+        logger.info("Post Page: {}", postPage.getContent());
 
         List<FetchPostsDto> content = postPage.map(fetchPostsMapper::toDto).getContent();
         return new PageResponse<>(content, postPage.getNumber(), postPage.getSize(), postPage.getTotalElements(), postPage.getTotalPages());
